Use Composer's alpine image as base

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -1,5 +1,5 @@
 # PHPSpec Docker Container
-FROM composer/composer
+FROM composer/composer:alpine
 MAINTAINER Julien Breux <julien.breux@gmail.com>
 
 # Goto temporary directory
